--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ngrx/entity": "^5.2.0",
     "@ngrx/store": "^5.1.0",
     "@ngrx/store-devtools": "^5.2.0",
     "angularfire2": "^5.0.0-rc.6",
