--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ngrx/effects": "^5.2.0",
     "@ngrx/entity": "^5.2.0",
     "@ngrx/store": "^5.1.0",
     "@ngrx/store-devtools": "^5.2.0",
+    "angular4-material-table": "^0.2.0",
     "angularfire2": "^5.0.0-rc.6",
     "core-js": "^2.4.1",
     "firebase": "^4.10.0",
